--- a/lab05/task1/registration.html
+++ b/lab05/task1/registration.html
@@ -21,13 +21,13 @@
     <br>
     <br>
 
-    <button onclick="makeAction()">Отправить данные, кому попало!</button>
+    <button onclick="registrate()">Отправить данные, кому попало!</button>
 
     <br>
     <br>
 
     <h1 id="result-label"></h1>
 
-    <script src="/code.js"></script>
+    <script src="/registration.js"></script>
 </body>
 </html>
