--- a/lab05/task1/getUser.html
+++ b/lab05/task1/getUser.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Я всё ещё хочу умереть</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/getStyle.css">
 </head>
 <body>
     <h1>GET запросик... Готов отдать всё, что угодно...</h1>
 
     <p>Почта человека, который Вам нужен:</p>
-    <input id="mail" type="text" spellcheck="false" autocomplete="off">
+    <input class="inp" id="mail" type="text" spellcheck="false" autocomplete="off">
 
     <br>
     <br>
 
-    <button onclick="getInfo()">Получить данные!</button>
+    <button class="button" onclick="getInfo()">Получить данные!</button>
 
     <br>
     <br>
