--- a/lab05/task1/registration.html
+++ b/lab05/task1/registration.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Я хотел умереть</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/regStyle.css">
 </head>
 <body>
     <h1>POST запросик... Дайте нам свои данные!</h1>
 
     <p>Почта</p>
-    <input id="mail" type="text" spellcheck="false" autocomplete="off">
+    <input class="inp" id="mail" type="text" spellcheck="false" autocomplete="off">
 
     <p>Фамилия</p>
-    <input id="name" type="text" spellcheck="false" autocomplete="off">
+    <input class="inp" id="name" type="text" spellcheck="false" autocomplete="off">
 
     <p>Номер телефона</p>
-    <input id="telephone" type="text" spellcheck="false" autocomplete="off">
+    <input class="inp" id="telephone" type="text" spellcheck="false" autocomplete="off">
 
 
     <br>
     <br>
 
-    <button onclick="registrate()">Отправить данные, кому попало!</button>
+    <button class="button" onclick="registrate()">Отправить данные, кому попало!</button>
 
     <br>
     <br>
