FIX: small fixes

--- a/lab04/task1/comparison.html
+++ b/lab04/task1/comparison.html
@@ -5,7 +5,7 @@
     <title>Нахождение наибольшего из трёх чисел</title>
 </head>
 <body>  
-    <h1>Вот сюда числа вводить надо, вроде:</h1>
+    <h1>Числа:</h1>
     <form method="GET" action="/comparison">
         <p>Первое значение</p>
         <input name="fNum" spellcheck="false" autocomplete="off">
