--- a/lab04/task2/BlackTongue.html
+++ b/lab04/task2/BlackTongue.html
@@ -5,7 +5,7 @@
     <title>У меня тут текстики одной интересной группы есть. Какая строчка песени интересует? ;)</title>
 </head>
 <body>  
-    <h1>Вот сюда числа вводить надо, вроде:</h1>
+    <h1>У меня тут текстики одной интересной группы есть. Какая строчка песени интересует? ;)</h1>
     <form method="GET" action="/BlackTongue">
         <p>Номер строчки вот сюда вводить:</p>
         <input name="strNum" spellcheck="false" autocomplete="off">
