FIX: small fixes

--- a/lab05/getUser.html
+++ b/lab05/getUser.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Я всё ещё хочу умереть</title>
+    <title>Получение информации о пользователе</title>
     <link rel="stylesheet" href="/getStyle.css">
 </head>
 <body>
-    <h1>GET запросик... Готов отдать всё, что угодно...</h1>
+    <h1>GET запрос. Готов отдать всё, что угодно...</h1>
 
     <p>Почта человека, который Вам нужен:</p>
     <input class="inp" id="mail" type="text" spellcheck="false" autocomplete="off">
