--- a/lab05/registration.html
+++ b/lab05/registration.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Я хотел умереть</title>
+    <title>Отправка данных о пользователе на сервер</title>
     <link rel="stylesheet" href="/regStyle.css">
 </head>
 <body>
-    <h1>POST запросик... Дайте нам свои данные!</h1>
+    <h1>POST запрос. Дайте нам свои данные!</h1>
 
     <p>Почта</p>
     <input class="inp" id="mail" type="text" spellcheck="false" autocomplete="off">
